<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateRecetaFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_txt_shape"
            android:padding="16dp"
            android:textColorHint="#F1F1F1"
            android:hint="@string/nombre"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/editProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_txt_shape"
            android:padding="16dp"
            android:textColorHint="#F1F1F1"
            android:hint="@string/producto"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/editCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_txt_shape"
            android:padding="16dp"
            android:textColorHint="#F1F1F1"
            android:hint="@string/categoria"
            android:maxLines="1"/>


        <EditText
            android:id="@+id/editWebUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_txt_shape"
            android:gravity="start"
            android:hint="@string/web_url"
            android:padding="16dp"
            android:textColorHint="#F1F1F1" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:backgroundTint="@color/green_dark"
        android:src="@drawable/ic_done"
        tools:ignore="SpeakableTextPresentCheck" />

</FrameLayout>